fixed event title box alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -185,6 +185,7 @@ div.station div div div {
 	margin-right: 3px;
 	margin-left: 3px;
 	padding-left: 5px;
+	padding-top: 2px;
 	color: white;
 	font-weight: bold;
 }
